# PyPub

./: .gitignore  LICENSE  README.md  build.ps1  installer.iss  pyproject.toml  pypub.spec
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  BUILD.md  RELEASE.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: verify-frozen-bundle.ps1
src/pypub/: __init__.py  main.py
src/pypub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pypub/application/: auth_service.py  conversion.py  crash_handler.py  editor_sync.py  export_service.py  post_service.py  sanitization.py
src/pypub/domain/: editor_modes.py  exceptions.py  models.py  settings.py
src/pypub/infrastructure/: db.py  indieauth.py  keyring_store.py  logger.py  micropub.py
src/pypub/ui/: about.py  about_panel.py  app_icon.py  compose.py  drafts.py  editor_core.py  editor_workspace.py  login.py  media_panel.py  navigation.py  publish_dialog.py  remote_edit.py  settings.py  settings_panel.py  shell.py  technical.py
src/pypub/ui/editor/: __init__.py  compose_header.py  document_canvas.py  document_editor.py  editor_theme.py  floating_format_bar.py  format_toolbar.py  link_image_handlers.py  preset_layouts.py  slash_menu.py
tests/: conftest.py  test_database.py  test_editor_sync.py  test_indieauth.py  test_integration_stub.py  test_micropub.py  test_shell_navigation.py  test_smoke.py
